# orthologs_aa_to_nucl

./: Cargo.toml
R/: orthologs_missing_from.R
python/: ltp_occupancy_into_blast_commands.py
shell/: call_orthologs_aa_to_nucl.sh  search_for_missing_orthologs.sh
src/: main.rs
