[package]
name = "orthologs_aa_to_nucl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = {git = "https://github.com/rust-bio/rust-bio"}
clap = "3.2.12"
csv = "1.1.6"
serde = "1.0.142"
polars-core = "0.22.7"
polars-io = "0.22.7"
polars = {version = "0.24.3", features = ["lazy", "strings"]}
